# hypermine

./: .gitignore  Cargo.toml  LICENSE-ZLIB  README.md  data.txt  data.txtLocal  first_iteration.patch  shell.nix
.github/: dependabot.yml
.github/workflows/: package.yml  rust.yml
assets/: .gitattributes  character.glb
client/: Cargo.toml
client/benches/: surface_extraction.rs
client/shaders/: common.h  fog.frag  fullscreen.vert  mesh.frag  mesh.vert  sky.frag  voxels.frag  voxels.vert
client/shaders/surface-extraction/: common.h  count.comp  emit.comp  extract.comp  prefix-sum.comp  surface.h
client/src/: .sim.rs.swp  chunk_ray_tracer.rs  config.rs  graph_ray_tracer.rs  lib.rs  loader.rs  local_character_controller.rs  logfile.rs  main.rs  metrics.rs  net.rs  point_chunk_ray_tracer.rs  prediction.rs  sim.rs  single_block_sphere_collision_checker.rs  sphere_chunk_ray_tracer.rs  worldgen.rs  worldgen_driver.rs
client/src/graphics/: base.rs  core.rs  draw.rs  fog.rs  frustum.rs  gltf_mesh.rs  gui.rs  loader.rs  lru_table.rs  meshes.rs  mod.rs  png_array.rs  sky.rs  surface_extraction.rs  tests.rs  voxels.rs  window.rs
client/src/graphics/voxels/: mod.rs  surface.rs  surface_extraction.rs  tests.rs
client/src/lahar_deprecated/: mod.rs  ring_alloc.rs  staging.rs  transfer.rs
client/src/lahar_substitute/: condition.rs  mod.rs  staging.rs  transfer.rs
common/: Cargo.toml
common/benches/: bench.rs
common/src/: blinker.rs  character_controller.rs  chunk.rs  chunk_collision.rs  chunk_ray_casting.rs  chunks.rs  codec.rs  collision.rs  collision_math.rs  cursor.rs  dodeca.rs  force.rs  graph.rs  graph_collision.rs  graph_entities.rs  graph_ray_casting.rs  id.rs  id_generator.rs  lib.rs  lru_slab.rs  margins.rs  math.rs  node.rs  peer_traverser.rs  plane.rs  proto.rs  sim_config.rs  terraingen.rs  ticker.rs  traversal.rs  voxel_math.rs  world.rs  worldgen.rs
common/src/character_controller/: collision.rs  mod.rs  vector_bounds.rs
common/src/math/: isometry.rs  mod.rs
common/src/worldgen/: horosphere.rs  mod.rs  plane.rs  terraingen.rs
demo/: Cargo.toml
demo/src/: chunk_ray_tracer.rs  collision.rs  color.rs  draw.rs  lib.rs  main.rs  math.rs  node_string.rs  penta.rs  player.rs  sphere_chunk_ray_tracer.rs  tessellation.rs  tessellation_ray_tracer.rs
docs/: README.md  how_to_play.md  world_generation.md
save/: Cargo.toml
save/benches/: bench.rs
save/gen-protos/: Cargo.toml
save/gen-protos/src/: main.rs
save/src/: lib.rs  protos.proto  protos.rs
save/tests/: heavy.rs  tests.rs
server/: Cargo.toml
server/src/: config.rs  input_queue.rs  lib.rs  main.rs  postcard_helpers.rs  sim.rs
