[workspace]
resolver = "2"
members = ["client", "server", "common", "save", "save/gen-protos"]

[workspace.dependencies]
hecs = "0.10.0"
nalgebra = { version = "0.33.0", features = ["libm-force"] }
quinn = { version = "0.11", default-features = false, features = ["rustls", "ring", "runtime-tokio"] }
toml = { version = "0.9.11", default-features = false, features = ["parse"] }

[profile.dev]
opt-level = 1
debug-assertions = true

[profile.dev.package."*"]
opt-level = 2

[profile.release.build-override]
opt-level = 0
