[package]
name = "client"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2018"
publish = false
license = "Apache-2.0 OR Zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
server = { path = "../server" }
tracing = "0.1.10"
ash = { version = "0.37.1", features = ["loaded"] }
lahar = { git = "https://github.com/Ralith/lahar", rev = "88abd75e41d04c3a4199d95f581cb135f5962844" }
winit = "0.27.2"
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
directories = "4.0.1"
vk-shader-macros = "0.2.5"
nalgebra = "0.31.2"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "sync", "macros"] }
png = "0.17.5"
anyhow = "1.0.26"
whoami = "1.2.1"
serde = { version = "1.0.104", features = ["derive", "rc"] }
toml = "0.5.5"
fxhash = "0.2.1"
downcast-rs = "1.1.1"
quinn = "0.8.3"
futures-util = "0.3.1"
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
webpki = "0.22.0"
hecs = "0.9.0"
rcgen = { version = "0.10.0", default-features = false }
memoffset = "0.7"
gltf = { version = "1.0.0", default-features = false, features = ["utils"] }
metrics = { version = "0.20.1" }
hdrhistogram = { version = "7", default-features = false }

[features]
default = ["use-repo-assets"]
use-repo-assets = []

[dev-dependencies]
approx = "0.5.1"
bencher = "0.1.5"
renderdoc = "0.10.1"

[[bench]]
name = "surface_extraction"
harness = false
