[package]
name = "client"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2021"
publish = false
license = "Apache-2.0 OR Zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
server = { path = "../server" }
tracing = "0.1.10"
ash = { version = "0.38.0", default-features = false, features = ["loaded", "debug", "std"] }
lahar = { git = "https://github.com/Ralith/lahar", rev = "7963ae5750ea61fa0a894dbb73d3be0ac77255d2" }
winit = "0.29.10"
ash-window = "0.13"
raw-window-handle = "0.6"
directories = "5.0.1"
vk-shader-macros = "0.2.5"
nalgebra = { workspace = true }
libm = "0.2.6"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "sync", "macros"] }
png = "0.17.5"
anyhow = "1.0.26"
whoami = "1.2.1"
serde = { version = "1.0.104", features = ["derive", "rc"] }
toml = { workspace = true }
fxhash = "0.2.1"
downcast-rs = "1.1.1"
quinn = { workspace = true }
futures-util = "0.3.1"
rustls = { version = "0.21.7", features = ["dangerous_configuration"] }
webpki = "0.22.0"
hecs = { workspace = true }
rcgen = { version = "0.13.1", default-features = false, features = ["ring"] }
memoffset = "0.9"
gltf = { version = "1.0.0", default-features = false, features = ["utils"] }
metrics = "0.22.1"
hdrhistogram = { version = "7", default-features = false }
save = { path = "../save" }

[features]
default = ["use-repo-assets"]
use-repo-assets = []

[dev-dependencies]
approx = "0.5.1"
bencher = "0.1.5"
renderdoc = "0.12.1"

[[bench]]
name = "surface_extraction"
harness = false
