[package]
name = "common"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2018"
publish = false
license = "Apache-2.0 OR Zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
nalgebra = { version = "0.31.2", features = ["rand", "serde-serialize"] }
bincode = "1.2.1"
anyhow = "1.0.26"
quinn = "0.9.2"
lazy_static = "1.4.0"
fxhash = "0.2.1"
tracing = "0.1.10"
hecs = "0.9.0"
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["env-filter", "smallvec", "fmt", "ansi", "time", "parking_lot"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"

[dev-dependencies]
approx = "0.5.1"
