[package]
name = "common"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2021"
publish = false
license = "Apache-2.0 OR Zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.3"
serde = { version = "1.0.104", features = ["derive"] }
nalgebra = { workspace = true, features = ["rand", "serde-serialize"] }
bincode = "1.2.1"
anyhow = "1.0.26"
quinn = { workspace = true }
lazy_static = "1.4.0"
libm = "0.2.6"
fxhash = "0.2.1"
tracing = "0.1.10"
hecs = { workspace = true }
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["env-filter", "smallvec", "fmt", "ansi", "time", "parking_lot"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.4"


[[bench]]
name = "bench"
harness = false
