[package]
name = "common"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2024"
publish = false
license = "Apache-2.0 OR Zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.6"
blake3 = "1.3.3"
serde = { version = "1.0.104", features = ["derive"] }
nalgebra = { workspace = true, features = ["serde-serialize"] }
postcard = { version = "1.0.4", default-features = false, features = ["use-std"] }
anyhow = "1.0.101"
quinn = { workspace = true }
libm = "0.2.16"
fxhash = "0.2.1"
tracing = "0.1.10"
hecs = { workspace = true }
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["env-filter", "smallvec", "fmt", "ansi", "time", "parking_lot"] }
rand = "0.9.0"
rand_pcg = "0.9.0"
rand_distr = "0.5.0"
simba = "0.9.0"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.8.2"


[[bench]]
name = "bench"
harness = false
