[package]
name = "save"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.8"
redb = "0.15"
thiserror = "1.0.38"
zstd = { package = "zstd-safe", version = "6.0.4", features = ["std", "experimental"] }

[dev-dependencies]
tempfile = "3.4"
criterion = "0.4"
rand = { version = "0.8.5", features = ["small_rng"] }

[[bench]]
name = "bench"
harness = false
