[package]
name = "save"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13.0"
redb = "2.0"
thiserror = "1.0.38"
zstd = { package = "zstd-safe", version = "7.1.0", default-features = false, features = ["std", "experimental"] }

[dev-dependencies]
tempfile = "3.4"
criterion = "0.5"
rand = { version = "0.8.5", features = ["small_rng"] }

[[bench]]
name = "bench"
harness = false
