[package]
name = "server"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2018"
publish = false
license = "Apache-2.0 OR Zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tracing = "0.1.10"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "time", "macros", "sync"] }
tokio-stream = "0.1.8"
quinn = { version = "0.8.3", features = ["rustls"] }
serde = { version = "1.0.104", features = ["derive", "rc"] }
toml = "0.5.5"
anyhow = "1.0.26"
rcgen = { version = "0.9.2", default-features = false }
hostname = "0.3.0"
futures = "0.3.1"
hecs = "0.9.0"
rand = { version = "0.8.5", features = [ "small_rng" ] }
fxhash = "0.2.1"
nalgebra = "0.31.2"
slotmap = "1.0.6"
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
