[package]
name = "server"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2021"
publish = false
license = "Apache-2.0 OR Zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "1.0.4", default-features = false, features = ["use-std"] }
common = { path = "../common" }
tracing = "0.1.10"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "time", "macros", "sync"] }
quinn = { workspace = true }
serde = { version = "1.0.104", features = ["derive", "rc"] }
toml = { workspace = true }
anyhow = "1.0.26"
rcgen = { version = "0.13.1", default-features = false, features = ["ring"] }
hostname = "0.4.0"
hecs = { workspace = true }
rand = { version = "0.8.5", features = ["small_rng"] }
fxhash = "0.2.1"
nalgebra = { workspace = true }
libm = "0.2.6"
slotmap = "1.0.6"
rustls-pemfile = "2.1.2"
save = { path = "../save" }
